Fix cropping of rewind icon in Safari on iOS and ensure highlight colors the entire glyph JW7-3912 JW7-3664

--- a/src/css/imports/controlbar.less
+++ b/src/css/imports/controlbar.less
@@ -96,9 +96,10 @@
   min-width: 2.25em;
 }
 
-// Sets the icon container size as it's font glyph does not fit in it's boundries correctly.
+// Ensure button highlight color spans the width of the rewind icon
 .jw-icon-rewind {
-  min-width: 2.25em;
+  min-width: 2em;
+  padding: 0 .25em;
 }
 
 .jw-icon-volume {
